# station95chatbot

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTIC_AI_GUIDE.md  DEPLOYMENT_COMPARISON.md  LAMBDA_DEPLOYMENT.md  LOCAL_TESTING.md  Makefile  POLLING.md  QUICKSTART-DOCKER.md  README.md  SECRETS_MANAGER_SETUP.md  SETUP_GUIDE.md  cloudformation-template.yaml  generate_test_curl.py  groupme_webhook_handler_lambda.py  manual_test_repl.py  mock_calendar.py  mock_calendar_enhanced.py  mock_calendar_stateful.py  poll.sh  pyproject.toml  requirements.txt  run.py  samconfig.toml  test_agentic.py  test_agentic_stateful.py  test_bot.py  test_bot_agentic.py
.aws-sam/: build.toml
.aws-sam/cache/5d4a30bd-0276-4b5e-be90-72fd506c1a94/: .gitignore.lambda  README.md  SECURITY_GUIDE.md  deploy-lambda.sh  template.yaml  test_bot.py
.aws-sam/cache/5d4a30bd-0276-4b5e-be90-72fd506c1a94/anthropic-0.74.1.dist-info/: RECORD
.aws-sam/cache/5d4a30bd-0276-4b5e-be90-72fd506c1a94/data/: roster.json
.aws-sam/cache/5d4a30bd-0276-4b5e-be90-72fd506c1a94/fastapi-0.121.3.dist-info/: RECORD
.aws-sam/cache/5d4a30bd-0276-4b5e-be90-72fd506c1a94/prompts/: groupme-bot-specification.md
.aws-sam/cache/5d4a30bd-0276-4b5e-be90-72fd506c1a94/tests/: __init__.py  test_roster.py
examples/: poll_example.py
src/station95chatbot/: agentic_processor.py  ai_processor.py  calendar_client.py  config.py  groupme_client.py  groupme_poller.py  logging_config.py  message_processor.py  models.py  poll_messages.py  tools.py  webhook_handler.py
tests/: test_models.py
(+6 files in other folders)
